compiler/e2e/test/snapshot/unsafe_function/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsafe function call outside unsafe scope
   ╭─ compiler/e2e/test/snapshot/unsafe_function/main.pnx:25:5
   │
 6 │     public unsafe function dangerous(): 
   │                            --------- the function is declared as unsafe here
   ·
25 │     MyType::dangerous()
   │     ^^^^^^^^^^^^^^^^^^^ call to unsafe function `main::[implements MyType]::dangerous` requires unsafe scope

error: unsafe function call outside unsafe scope
   ╭─ compiler/e2e/test/snapshot/unsafe_function/main.pnx:26:5
   │
14 │ public unsafe function anotherDangerous():
   │                        ---------------- the function is declared as unsafe here
   ·
26 │     anotherDangerous()
   │     ^^^^^^^^^^^^^^^^^^ call to unsafe function `main::anotherDangerous` requires unsafe scope

error: unsafe function call outside unsafe scope
   ╭─ compiler/e2e/test/snapshot/unsafe_function/main.pnx:27:13
   │
10 │     public unsafe function dangerousMethod(self: &this):
   │                            --------------- the function is declared as unsafe here
   ·
27 │     MyType{}.dangerousMethod()
   │             ^^^^^^^^^^^^^^^^^^ call to unsafe function `main::[implements MyType]::dangerousMethod` requires unsafe scope

error: unsafe function call outside unsafe scope
   ╭─ compiler/e2e/test/snapshot/unsafe_function/main.pnx:28:5
   │
19 │     public unsafe function traitDangerous()
   │                            -------------- the function is declared as unsafe here
   ·
28 │     MyTrait[T]::traitDangerous()
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function `main::MyTrait::traitDangerous` requires unsafe scope

error: unsafe function call outside unsafe scope
   ╭─ compiler/e2e/test/snapshot/unsafe_function/main.pnx:29:5
   │
21 │     public unsafe function traitDangerousMethod(self: &T)
   │                            -------------------- the function is declared as unsafe here
   ·
29 │     t.traitDangerousMethod()
   │     ^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function `main::MyTrait::traitDangerousMethod` requires unsafe scope

error: Compilation aborted due to 5 error(s)



stdout:
